--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Existing Dockerfile",
 	"build": {
-		"context": "..",
-		"dockerfile": "../Dockerfile"
+		"context": ".",
+		"dockerfile": "./Dockerfile"
 	}
 }
